fixed image issues